2023-10-19T16:18:56Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6577416423 # 2000
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-19
* notice: last 14d: unq all: 19 117
* notice: prev accum: outdated-unq outdated-all / unq all: 399 1891 / 418 2016
* notice: next accum: outdated-unq outdated-all / unq all: 399 1891 / 419 2017
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -9 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-10-05 2023-10-19]

2023-10-18T16:19:13Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6563701109 # 1997
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-18
* notice: last 14d: unq all: 19 125
* notice: prev accum: outdated-unq outdated-all / unq all: 399 1891 / 417 2010
* notice: next accum: outdated-unq outdated-all / unq all: 399 1891 / 418 2016
* notice: prev exec diff / last date diff / accum: unq all: +1 +6 -0 -0 / +2 +8 -0 -0 / 2 8
* notice: removed / changed dates: [] / [2023-10-18]

2023-10-18T08:18:48Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6558141436 # 1996
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-18
* notice: last 14d: unq all: 18 119
* notice: prev accum: outdated-unq outdated-all / unq all: 399 1891 / 416 2008
* notice: next accum: outdated-unq outdated-all / unq all: 399 1891 / 417 2010
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-10-18]

2023-10-17T16:19:09Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6550010585 # 1994