@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-19T16:18:56Z",
-  "count_outdated" : 1891,
-  "uniques_outdated" : 399,
-  "count" : 2017,
-  "uniques" : 419,
+  "timestamp" : "2023-10-20T01:04:00Z",
+  "count_outdated" : 1907,
+  "uniques_outdated" : 401,
+  "count" : 2018,
+  "uniques" : 420,
   "views" : [
-    {
-      "timestamp": "2023-10-05T00:00:00Z",
-      "count": 7,
-      "count_minmax": [ 7, 16 ],
-      "count_decinc": [ 9, 16 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2023-10-06T00:00:00Z",
       "count": 1,
@@ -115,12 +106,12 @@
     },
     {
       "timestamp": "2023-10-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
