@@ -1,12 +1,7 @@
 {
-  "count": 117,
+  "count": 111,
   "uniques": 19,
   "views": [
-    {
-      "timestamp": "2023-10-05T00:00:00Z",
-      "count": 7,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-10-06T00:00:00Z",
       "count": 1,
@@ -64,8 +59,8 @@
     },
     {
       "timestamp": "2023-10-19T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
