@@ -1,3 +1,12 @@
+2023-10-20T01:04:00Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6582052554 # 2001
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-20
+* notice: last 14d: unq all: 19 111
+* notice: prev accum: outdated-unq outdated-all / unq all: 399 1891 / 419 2017
+* notice: next accum: outdated-unq outdated-all / unq all: 401 1907 / 420 2018
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [2023-10-05] / [2023-10-19]
+
 2023-10-19T16:18:56Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6577416423 # 2000
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-19
